[package]
name = "rustorrent"
version = "0.1.0"
authors = ["Sebastien Chapuis <sebastien@chapu.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde_bencode = "^0.2.0"
serde = { version = "1.0", features = ["derive"] }
# serde_derive = "^1.0.0"
# serde_urlencoded = "0.6"
serde_bytes = "0.11"

smallvec = { version = "1.0", features = ["serde"] }
memchr = "2"
sha1 = { version = "0.6", features = ["std"] }
url = "2"
byteorder = "1"
crossbeam-channel = "0.4"
#crossbeam-deque = "0.7"
parking_lot = "0.9"
#bit_field = "0.10.0"
# hashbrown = "0.6"
coarsetime = "0.1"
num_cpus = "1"

futures =  { version = "0.3", default-features = false }
#futures = "0.3"
async-std = { version = "1", features = ["unstable"] }
# async-std = "1"
# surf = "1.0.3"
